--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,6 +1,13 @@
 FROM debian:bullseye
 
-# RUN
+RUN apt update \
+    apt install vim -y \
+    apt install curl -y \
+    apt install nginx -y
+
+RUN mkdir -p /etc/nginx/ssl
+
+RUN apt install OpenSSL -y
 
 # COPY
 
