--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -3,11 +3,14 @@ FROM debian:bullseye
 RUN apt update \
     apt install vim -y \
     apt install curl -y \
-    apt install nginx -y
+    apt install nginx -y \
+    apt install OpenSSL -y
 
-RUN mkdir -p /etc/nginx/ssl
+RUN mkdir -p /etc/nginx/ssl \
+    openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key -subj "/C=FR/ST=IDF/L=Paris/O=42/OU=42/CN=login.42.fr/UID=login"
 
-RUN apt install OpenSSL -y
+
+RUN docker run -it nginx
 
 # COPY
 
