--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,3 +5,5 @@ RUN apt update -y && \
     apt-get install mariadb-server -y && \
     systemctl enable mariadb && \
     systemctl start mariadb
+
+COPY conf/50-server.cnf	/etc/mysql/mariadb.conf.d/50-server.cnf
