--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -9,10 +9,13 @@ server {
 	index index.php index.html index.htm;
 
 	location / {
-		try_files $uri $uri/ =404;
+		try_files $uri $uri/ /index.php;
 	}
-	location ~ \.php$ {
-		include snippets/fastcgi-php.conf;
-		fastcgi_pass wordpress:9000;
-	}
+	# location / {
+	# 	try_files $uri $uri/ =404;
+	# }
+	# location ~ \.php$ {
+	# 	include snippets/fastcgi-php.conf;
+	# 	fastcgi_pass wordpress:9000;
+	# }
 }
