--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,16 +1,18 @@
+events {
+    worker_connections 1024;
+}
+
+http {
 server {
 	listen 443 ssl;
 	ssl_protocols TLSv1.2 TLSv1.3;
-	ssl_certificate /etc/nginx/ssl/bundle.crt;
-	ssl_certificate_key /etc/nginx/ssl/private.key;
+	ssl_certificate /etc/nginx/ssl/inception.crt;
+	ssl_certificate_key /etc/nginx/ssl/inception.key;
 
 	root /var/www/html;
 	server_name localhost;
-	index index.php index.html index.htm;
+	index index.php index.html index.htm index.nginx-debian.html;
 
-	location / {
-		try_files $uri $uri/ /index.php;
-	}
 	# location / {
 	# 	try_files $uri $uri/ =404;
 	# }
@@ -18,4 +20,5 @@ server {
 	# 	include snippets/fastcgi-php.conf;
 	# 	fastcgi_pass wordpress:9000;
 	# }
+}
 }
