mariadb script sh

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -8,29 +8,28 @@ RUN apt update -y && \
 
 COPY conf/50-server.cnf	/etc/mysql/mariadb.conf.d/50-server.cnf
 
-///////////////////
-# Use a base Linux image
-FROM debian:bullseye
+# # Use a base Linux image
+# FROM debian:bullseye
 
-# Set environment variables for MariaDB installation
-ENV MYSQL_ROOT_PASSWORD=root_password \
-    MYSQL_DATABASE=example_db \
-    MYSQL_USER=user_name \
-    MYSQL_PASSWORD=user_password
+# # Set environment variables for MariaDB installation
+# ENV MYSQL_ROOT_PASSWORD=root_password \
+#     MYSQL_DATABASE=example_db \
+#     MYSQL_USER=user_name \
+#     MYSQL_PASSWORD=user_password
 
-# Install MariaDB
-RUN apt-get update && apt-get install -y \
-    mariadb-server \
-    && apt-get clean
+# # Install MariaDB
+# RUN apt-get update && apt-get install -y \
+#     mariadb-server \
+#     && apt-get clean
 
-# Copy custom configuration (optional)
-# COPY my-custom.cnf /etc/mysql/conf.d/
+# # Copy custom configuration (optional)
+# # COPY my-custom.cnf /etc/mysql/conf.d/
 
-# Expose MariaDB port
-EXPOSE 3306
+# # Expose MariaDB port
+# EXPOSE 3306
 
-# Add initialization scripts (optional)
-COPY init-db.sql /docker-entrypoint-initdb.d/
+# # Add initialization scripts (optional)
+# COPY init-db.sql /docker-entrypoint-initdb.d/
 
-# Start MariaDB
-CMD ["mysqld"]
+# # Start MariaDB
+# CMD ["mysqld"]
