--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,11 +2,25 @@ FROM debian:bullseye
 
 RUN apt update -y && \
     apt upgrade -y && \
-    apt-get install mariadb-server -y && \
-    systemctl enable mariadb && \
-    systemctl start mariadb
+    apt-get install mariadb-server -y
+    # systemctl enable mariadb && \
+    # systemctl start mariadb
 
 COPY conf/50-server.cnf	/etc/mysql/mariadb.conf.d/50-server.cnf
+
+COPY docker-entrypoint.sh /usr/local/bin/
+
+COPY .env /var/lib/mysql
+
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
+WORKDIR /var/lib/mysql
+
+EXPOSE 3306
+
+ENTRYPOINT ["docker-entrypoint.sh"]
+
+CMD ["mysqld"]
 
 # # Use a base Linux image
 # FROM debian:bullseye
