--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -4,20 +4,18 @@ RUN apt update -y && apt upgrade -y
 
 RUN apt-get -y install wget
 
-RUN apt-get install -y php7.3\
+RUN apt-get install -y php7.4\
 						php-fpm\
 						php-mysql\
 						mariadb-client
 
-# RUN wget https://fr.wordpress.org/wordpress-6.7.1-fr_FR.tar.gz -P /var/www
+RUN wget https://fr.wordpress.org/wordpress-6.7.1-fr_FR.tar.gz -P /var/www
 
-# RUN cd /var/www && tar -xzf wordpress-6.7.1-fr_FR.tar.gz && rm wordpress-6.7.1-fr_FR.tar.gz
+RUN cd /var/www && tar -xzf wordpress-6.7.1-fr_FR.tar.gz && rm wordpress-6.7.1-fr_FR.tar.gz
 
-# RUN chown -R root:root /var/www/wordpress
+RUN chown -R root:root /var/www/wordpress
 
 # RUN chown -R www-data:www-data /var/www/wordpress
-
-
 
 RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 
