--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -9,11 +9,11 @@ RUN apt-get install -y php7.4\
 						php-mysql\
 						mariadb-client
 
-RUN wget https://fr.wordpress.org/wordpress-6.7.1-fr_FR.tar.gz -P /var/www
+# RUN wget https://fr.wordpress.org/wordpress-6.7.1-fr_FR.tar.gz -P /var/www
 
-RUN cd /var/www && tar -xzf wordpress-6.7.1-fr_FR.tar.gz && rm wordpress-6.7.1-fr_FR.tar.gz
+# RUN cd /var/www && tar -xzf wordpress-6.7.1-fr_FR.tar.gz && rm wordpress-6.7.1-fr_FR.tar.gz
 
-RUN chown -R root:root /var/www/wordpress
+# RUN chown -R root:root /var/www/wordpress
 
 # RUN chown -R www-data:www-data /var/www/wordpress
 
