--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -53,13 +53,13 @@ volumes:
 		driver_opts:
 		type: 'none'
 		o: 'bind'
-		device: '/Users/fli/data/wordpress'
+		device: '/home/fli/data/wordpress'
 	mariadb:
 		driver: local
 		driver_opts:
 		type: 'none' 
 		o: 'bind'
-		device: '/Users/fli/data/mariadb'
+		device: '/home/fli/data/mariadb'
 
 networks:
 	inception:
