--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -10,7 +10,7 @@ server {
 	ssl_certificate_key /etc/nginx/ssl/inception.key;
 
 	root /var/www/html;
-	server_name localhost;
+	server_name fli.42.fr;
 	index index.php index.html index.htm index.nginx-debian.html;
 
 	# location / {
