--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   mariadb:
     container_name: mariadb
@@ -8,7 +6,7 @@ services:
     build: 
       context: requirements/mariadb
       dockerfile: Dockerfile
-    env_file: .env
+    env_file: /home/fli/inception/srcs/.env
     volumes:
       - mariadb:/var/lib/mysql
     restart: unless-stopped
@@ -26,14 +24,14 @@ services:
     build: 
       context: requirements/nginx
       dockerfile: Dockerfile
-    env_file: .env
+    env_file: /home/fli/inception/srcs/.env
     ports:
       - "443:443"
     restart: on-failure
 
   wordpress:
     container_name: wordpress
-    env_file: .env
+    env_file: /home/fli/inception/srcs/.env
     volumes:
       - wordpress:/var/www/wordpress
     networks:
