mariadb still not working

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     networks:
       - inception
     depends_on:
+      - mariadb
       - wordpress
     build: 
       context: requirements/nginx
