--- a/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/srcs/requirements/mariadb/conf/50-server.cnf
@@ -1,7 +1,15 @@
 [mysqld]
+user = mysql
 datadir = /var/lib/mysql
-socket  = /run/mysqld/mysqld.sock
+pid-file = /run/mysqld/mysqld.pid
+socket = /run/mysqld/mysqld.sock
+basedir = /usr
+datadir = /var/lib/mysql
+tmpdir = /tmp
 bind_address=*
 port = 3306
-user = mysql
-skip-socket
+expire_logs_days = 10
+character-set-server = utf8mb4
+collation-server = utf8mb4_general_ci
+[mariadb]
+[mariadb-10.11]
