--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -13,12 +13,12 @@ server {
 	server_name fli.42.fr;
 	index index.php index.html index.htm index.nginx-debian.html;
 
-	# location / {
-	# 	try_files $uri $uri/ =404;
-	# }
-	# location ~ \.php$ {
-	# 	include snippets/fastcgi-php.conf;
-	# 	fastcgi_pass wordpress:9000;
-	# }
+	location / {
+		try_files $uri $uri/ =404;
+	}
+	location ~ \.php$ {
+		include snippets/fastcgi-php.conf;
+		fastcgi_pass wordpress:9000;
+	}
 }
 }
