--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -9,7 +9,7 @@ server {
 	ssl_certificate /etc/nginx/ssl/inception.crt;
 	ssl_certificate_key /etc/nginx/ssl/inception.key;
 
-	root /var/www/wordpress;
+	root /var/www/html;
 	server_name fli.42.fr;
 	index index.php index.html index.htm index.nginx-debian.html;
 
