--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -9,16 +9,16 @@ RUN apt-get install -y php7.4\
 						php-mysql\
 						mariadb-client
 
-# RUN sed -i 's/^clear_env.*/clear_env = no/' "/etc/php/7.4/fpm/pool.d/www.conf"
+RUN sed -i 's/^clear_env.*/clear_env = no/' "/etc/php/7.4/fpm/pool.d/www.conf"
 
 RUN sed -i 's|^listen = /run/php/php7.4-fpm.sock|listen = 0.0.0.0:9000|' /etc/php/7.4/fpm/pool.d/www.conf
 
 RUN	mkdir -p /var/www/html && \
 	chmod -R 777 /var/www/html
 
-RUN	wget https://ft.wordpress.org/wordpress-6.0-fr_FR.tar.gz -P /var/www/html
-RUN	cd /var/www/html && tar -xzf wordpress-6.0-fr_FR.tar.gz && rm wordpress-6.0-fr_FR.tar.gz
-RUN	chown -R root:root /var/www/html
+# RUN	wget https://fr.wordpress.org/wordpress-6.7.1-fr_FR.tar.gz -P /var/www/html
+# RUN	cd /var/www/html && tar -xzf wordpress-6.7.1-fr_FR.tar.gz && rm wordpress-6.7.1-fr_FR.tar.gz
+# RUN	chown -R root:root /var/www/html
 
 RUN	wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 RUN	chmod +x wp-cli.phar
