--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -56,13 +56,14 @@
 
 FROM	debian:bullseye
 
-RUN	 apt-get update -y &&  apt-get upgrade -y &&  apt-get install mariadb-server mariadb-client -y
+RUN	 apt-get update -y &&  apt-get upgrade -y &&  apt-get install mariadb-server -y
 
 RUN	mkdir -p /var/run/mysqld && \
-	chown mysql:mysql /var/run/mysqld && \
+	chown -R mysql:mysql /var/run/mysqld && \
 	chmod 777 /var/run/mysqld
 	
 COPY	conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
+
 COPY	docker-entrypoint.sh /usr/local/bin/
 
 RUN	chmod +x /usr/local/bin/docker-entrypoint.sh
@@ -70,4 +71,3 @@ RUN	chmod +x /usr/local/bin/docker-entrypoint.sh
 EXPOSE	3306
 
 ENTRYPOINT ["usr/local/bin/docker-entrypoint.sh"]
-CMD ["mysqld"]
