--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -16,6 +16,6 @@ COPY conf/nginx.conf /etc/nginx/nginx.conf
 
 WORKDIR /var/www/html
 
-EXPOSE 80 443
+EXPOSE 443
 
 CMD ["nginx", "-g", "daemon off;"]
