--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -21,4 +21,20 @@ server {
 		fastcgi_pass wordpress:9000;
 	}
 }
+##################
+server {
+	listen 443 ssl;
+	ssl_protocols TLSv1.2 TLSv1.3;
+	ssl_certificate /etc/nginx/ssl/inception.crt;
+	ssl_certificate_key /etc/nginx/ssl/inception.key;
+
+	root /var/www/html/static;
+	server_name static.fli.42.fr;
+	index index.html;
+
+	location / {
+		try_files $uri $uri/ =404;
+	}
+}
+###########################
 }
