--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -37,4 +37,22 @@ server {
 	}
 }
 ###########################
+# server {
+# 	listen 443 ssl;
+# 	server_name static.fli.42.fr;
+
+# 	ssl_certificate /etc/nginx/ssl/server.crt;
+# 	ssl_certificate_key /etc/nginx/ssl/server.key;
+
+# 	ssl_protocols TLSv1.2 TLSv1.3;
+# 	ssl_prefer_server_ciphers on;
+# 	ssl_ciphers HIGH:!aNULL:!MD5;
+
+# 	root /var/www/html/static/dist;
+
+# 	index index.html;
+# 	location / {
+# 		try_files $uri $uri/ /index.html;
+# 	}
+# }
 }
