--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     container_name: nginx
     volumes:
       - wordpress:/var/www/html
+      # - ./website-files:/var/www/html/static
     networks:
       - inception
     depends_on:
@@ -74,18 +75,18 @@ services:
       - "21:21"
       - "30000-30100:30000-30100"
 
-  static:
-    container_name: static
-    networks:
-      - inception
-    build:
-      context: requirements/static
-      dockerfile: Dockerfile
-    ports:
-      - "443:443"
-    volumes:
-      - ./requirements/static/website-files:/usr/share/caddy
-      - ./requirements/static/Caddyfile:/etc/caddy/Caddyfile 
+  # static:
+  #   container_name: static
+  #   networks:
+  #     - inception
+  #   build:
+  #     context: requirements/static
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "443:443"
+  #   volumes:
+  #     - ./requirements/static/website-files:/usr/share/caddy
+  #     - ./requirements/static/Caddyfile:/etc/caddy/Caddyfile 
   # static:
   #   networks:
   #     - inception
