--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -14,13 +14,11 @@ RUN chmod 755 /var/www/html && \
 
 COPY conf/nginx.conf /etc/nginx/nginx.conf
 
-RUN mkdir -p /var/www/html/static
+RUN mkdir -p /var/www/static
 
-RUN touch /var/www/html/test.test
+COPY ./website-files /var/www/static
 
-COPY ./website-files /var/www/html/static
-
-RUN chmod -R 755 /var/www/html/static
+RUN chmod -R 755 /var/www/static
 
 WORKDIR /var/www/html
 
