--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -28,7 +28,7 @@ server {
 	ssl_certificate /etc/nginx/ssl/inception.crt;
 	ssl_certificate_key /etc/nginx/ssl/inception.key;
 
-	root /var/www/html/static;
+	root /var/www/static;
 	server_name static.fli.42.fr;
 	index index.html;
 
