--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -59,23 +59,21 @@ server {
 		fastcgi_param PATH_INFO $fastcgi_path_info;
 	}
 }
-###########################
-# server {
-# 	listen 443 ssl;
-# 	server_name static.fli.42.fr;
 
-# 	ssl_certificate /etc/nginx/ssl/server.crt;
-# 	ssl_certificate_key /etc/nginx/ssl/server.key;
+server {
+    listen 443 ssl;
+	ssl_protocols TLSv1.2 TLSv1.3;
+	ssl_certificate /etc/nginx/ssl/inception.crt;
+	ssl_certificate_key /etc/nginx/ssl/inception.key;
 
-# 	ssl_protocols TLSv1.2 TLSv1.3;
-# 	ssl_prefer_server_ciphers on;
-# 	ssl_ciphers HIGH:!aNULL:!MD5;
-
-# 	root /var/www/html/static/dist;
-
-# 	index index.html;
-# 	location / {
-# 		try_files $uri $uri/ /index.html;
-# 	}
-# }
+    ssl_ciphers HIGH:!aNULL:!MD5;
+	server_name portainer.fli.42.fr;
+    location / {
+        proxy_pass http://portainer:9001;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
 }
